--- a/bdtask_custom_title_and_favicon/static/description/index.html
+++ b/bdtask_custom_title_and_favicon/static/description/index.html
@@ -32,22 +32,22 @@
 
       <!--*************************************** FEATURES ***************************************-->
 
-<h1 style="margin-top: 2rem; font-weight: bold; color: #714B67; text-align: center; background: #f6f6f6;">
+<h2 style="margin-top: 2rem; font-weight: bold; color: #714B67; text-align: center; background: #f6f6f6;">
     Features List
-</h1>
+</h2>
 <div class="row" style="padding-top: 0 !important;">
     <div class="col-12 mt-3 ml-md-2">
         <div class="mb-3">
-            <h5>
+            <h4>
                 <i class="fa fa-check-circle-o"/>
                 <strong>Change From Odoo Logo To Custom Logo (Your Company Logo)</strong>
-            </h5>
+            </h4>
         </div>
         <div class="mb-3">
-            <h5>
+            <h4>
                 <i class="fa fa-check-circle-o"/>
                 <strong>Change From Odoo Title To Custom Title (Your Company Title)</strong>
-            </h5>
+            </h4>
         </div>
     </div>
 </div>
@@ -56,16 +56,16 @@
 
     <!--*************************************** Special FEATURES ***************************************-->
 
-    <h1 style="margin-top: 2rem; font-weight: bold; color: #714B67; text-align: center; background: #f6f6f6;">
+    <h2 style="margin-top: 2rem; font-weight: bold; color: #714B67; text-align: center; background: #f6f6f6;">
         Work Flow With Screenshot
-    </h1>
+    </h2>
     <div class="row" style="padding-top: 0 !important;">
         <div class="col-12 mt-3 ml-md-2">
 
             <section class="oe_container">
                 <div class="oe_row oe_spaced">
                     <div class="oe_span12">
-                        <h2 class="oe_slogan" style="color:#332c3c;font-size: 28px;">Odoo Title and Logo </h2>
+                        <h2 class="oe_slogan" style="color:#0e0e0f;font-size: 28px;">Odoo Title and Logo </h2>
                         <h3 class="oe_slogan" style="color:#000066;font-size: 24px;"> 
                             When Run Your Module At First You Will Get This Screen And Open With Odoo Title And Logo.
                         </h3>
@@ -79,7 +79,7 @@
             <section class="oe_container">
                 <div class="oe_row oe_spaced">
                     <div class="oe_span12">
-                        <h2 class="oe_slogan" style="color:#332c3c;font-size: 28px;">Settings</h2>
+                        <h2 class="oe_slogan" style="color:#0e0e0f;font-size: 28px;">Settings</h2>
                         <h3 class="oe_slogan" style="color:#000066;font-size: 24px;"> 
                             In Sceond Step, Activate This Module And Go To Settings And Add Your Company In Your Users.
                         </h3>
@@ -93,7 +93,7 @@
             <section class="oe_container">
                 <div class="oe_row oe_spaced">
                     <div class="oe_span12">
-                        <h2 class="oe_slogan" style="color:#332c3c;font-size: 28px;">Custom Header and Favicon logo</h2>
+                        <h2 class="oe_slogan" style="color:#0e0e0f;font-size: 28px;">Custom Header and Favicon logo</h2>
                         <h3 class="oe_slogan" style="color:#000066;font-size: 24px;"> 
                             Change Your Company And Notice Your Favicon and Title
                         </h3>
