--- a/bdtask_custom_title_and_favicon/static/description/index.html
+++ b/bdtask_custom_title_and_favicon/static/description/index.html
@@ -65,7 +65,7 @@
             <section class="oe_container">
                 <div class="oe_row oe_spaced">
                     <div class="oe_span12">
-                        <h2 class="oe_slogan" style="color:#0e0e0f;font-size: 28px;">Odoo Title and Logo </h2>
+                        <h2 class="oe_slogan" style="color:#0e0e0f;font-size: 28px;font-weight: bold;">Odoo Title and Logo </h2>
                         <h3 class="oe_slogan" style="color:#000066;font-size: 24px;"> 
                             When Run Your Module At First You Will Get This Screen And Open With Odoo Title And Logo.
                         </h3>
@@ -79,7 +79,7 @@
             <section class="oe_container">
                 <div class="oe_row oe_spaced">
                     <div class="oe_span12">
-                        <h2 class="oe_slogan" style="color:#0e0e0f;font-size: 28px;">Settings</h2>
+                        <h2 class="oe_slogan" style="color:#0e0e0f;font-weight: bold;font-size: 28px;">Settings</h2>
                         <h3 class="oe_slogan" style="color:#000066;font-size: 24px;"> 
                             In Sceond Step, Activate This Module And Go To Settings And Add Your Company In Your Users.
                         </h3>
@@ -93,7 +93,7 @@
             <section class="oe_container">
                 <div class="oe_row oe_spaced">
                     <div class="oe_span12">
-                        <h2 class="oe_slogan" style="color:#0e0e0f;font-size: 28px;">Custom Header and Favicon logo</h2>
+                        <h2 class="oe_slogan" style="color:#0e0e0f;font-size: 28px;font-weight: bold;">Custom Header and Favicon logo</h2>
                         <h3 class="oe_slogan" style="color:#000066;font-size: 24px;"> 
                             Change Your Company And Notice Your Favicon and Title
                         </h3>
