--- a/bdtask_custom_title_and_favicon/static/description/index.html
+++ b/bdtask_custom_title_and_favicon/static/description/index.html
@@ -6,7 +6,7 @@
         Description:
     </h1>
     <div class="oe_row oe_spaced">
-            <div class="oe_span10"> 
+            <div > 
                     <h2 class="oe_slogan" style="color: #332c3c;font-size: 16px;font-weight: bold;">
                         Creating a unique online identity requires a crafted title and favicon logo. Your custom headline succinctly captures your brand's values and goals. Simultaneously, the favicon logo, a small yet impactful visual element, boosts recognition in browser tabs and bookmarks.
                         <br>
