--- a/bdtask_custom_title_and_favicon/static/description/index.html
+++ b/bdtask_custom_title_and_favicon/static/description/index.html
@@ -42,7 +42,7 @@
 
       <!--*************************************** Settings ***************************************-->
 
-      <h2 style="margin-top: 2rem; font-weight: bold; color: #714B67; text-align: center; background: #f6f6f6;">
+      <h2 style="margin-top: 2rem; color: #714B67; text-align: center; background: #f6f6f6;">
         Settings
     </h2>
     <div class="row" style="padding-top: 0 !important;">
