--- a/bdtask_custom_title_and_favicon/static/description/index.html
+++ b/bdtask_custom_title_and_favicon/static/description/index.html
@@ -10,7 +10,7 @@
                     <h2 class="oe_slogan" style="color: #332c3c;font-size: 16px;font-weight: bold;text-align: left">
                         Creating a unique online identity requires a crafted title and favicon logo. Your custom Title and logo succinctly captures your brand's values and goals. Simultaneously, the favicon logo, a small yet impactful visual element, boosts recognition in browser tabs and bookmarks.
                         <br>
-                        Together,a custom header and favicon logo create a cohesive online presence, enhancing your company's visibility in the digital landscape. These elements play a crucial role in establishing brand identity, building trust, and shaping a positive user perception. An effective title and favicon logo combination makes a lasting impression, significantly contributing to your business's success.                   
+                        Together,a custom title and favicon logo create a cohesive online presence, enhancing your company's visibility in the digital landscape. These elements play a crucial role in establishing brand identity, building trust, and shaping a positive user perception. An effective title and favicon logo combination makes a lasting impression, significantly contributing to your business's success.                   
                     </h2> 
             </div>
         </div>           
@@ -116,7 +116,7 @@
             <section class="oe_container">
                 <div class="oe_row oe_spaced">
                     <div class="oe_span12">
-                        <h2 class="oe_slogan" style="color:#0e0e0f;font-size: 28px;font-weight: bold;">Custom Header and Favicon logo</h2>
+                        <h2 class="oe_slogan" style="color:#0e0e0f;font-size: 28px;font-weight: bold;">Custom Title and Favicon logo</h2>
                         <div class="oe_demo oe_picture oe_screenshot">
                             <img src="cht3.png" style="height:400px;">
                         </div>
